--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,3 +6,6 @@ target_link_libraries(rapidcheck_gtest_example rapidcheck_gtest rapidcheck gtest
 
 add_executable(gtest_example gtest_example.cc)
 target_link_libraries(gtest_example pthread gtest gtest_main)
+
+add_executable(gmock_example gmock_example.cc)
+target_link_libraries(gmock_example pthread gtest gmock gmock_main)
