Add rapidcheck + googletest + googlemock example

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -4,6 +4,9 @@ target_link_libraries(example rapidcheck)
 add_executable(rapidcheck_gtest_example rapidcheck_gtest_example.cc)
 target_link_libraries(rapidcheck_gtest_example rapidcheck_gtest rapidcheck gtest gtest_main pthread)
 
+add_executable(rapidcheck_gmock_example rapidcheck_gmock_example.cc)
+target_link_libraries(rapidcheck_gmock_example rapidcheck_gmock rapidcheck gtest gmock gmock_main pthread)
+
 add_executable(gtest_example gtest_example.cc)
 target_link_libraries(gtest_example pthread gtest gtest_main)
 
