--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,14 +1,2 @@
-add_executable(example main.cc)
-target_link_libraries(example rapidcheck)
-
-add_executable(rapidcheck_gtest_example rapidcheck_gtest_example.cc)
-target_link_libraries(rapidcheck_gtest_example rapidcheck_gtest rapidcheck gtest gtest_main pthread)
-
-add_executable(rapidcheck_gmock_example rapidcheck_gmock_example.cc)
-target_link_libraries(rapidcheck_gmock_example rapidcheck_gmock rapidcheck gtest gmock gmock_main pthread)
-
-add_executable(gtest_example gtest_example.cc)
-target_link_libraries(gtest_example pthread gtest gtest_main)
-
-add_executable(gmock_example gmock_example.cc)
-target_link_libraries(gmock_example pthread gtest gmock gmock_main)
+add_library(turtle INTERFACE)
+target_include_directories(turtle INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
